// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly 1`] = `
<div>
  <h1>
    You have 
    9
     
    expenses
     totalling 
    $1,234.56
  </h1>
</div>
`;

exports[`should render ExpesesSummary text when 1 expense 1`] = `
<div>
  <h1>
    You have 
    1
     
    expense
     totalling 
    $10.00
  </h1>
</div>
`;

exports[`should render ExpesesSummary text when we have multiple expenses 1`] = `
<div>
  <h1>
    You have 
    9
     
    expenses
     totalling 
    $1,234.56
  </h1>
</div>
`;
